--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,8 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
-        "laravel/jetstream": "^1.6",
-        "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
-        "livewire/livewire": "^2.0"
+        "laravel/ui": "^3.1"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
