--- a/.env-2
+++ b/.env-2
@@ -8,10 +8,10 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=aviario-online.mysql.uhserver.com
 DB_PORT=3306
 DB_DATABASE=aviario_online
-DB_USERNAME=root
+DB_USERNAME=aviario
 DB_PASSWORD=informe*2020
 
 BROADCAST_DRIVER=log
