--- a/.env-2
+++ b/.env-2
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:xZk+UyhcNHkHcYp/bdyrHknbUPMJVNIQLlO8npEW70g=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -8,9 +8,9 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=aviario-online.mysql.uhserver.com
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=aviario_online
 DB_USERNAME=root
 DB_PASSWORD=
 
